fixed highlights not aligning properly with word wraping

--- a/src/Header.css
+++ b/src/Header.css
@@ -52,7 +52,7 @@ body {
     background-color: #15cc15;
 }
 
-.container, .backdrop, .highlights, .textArea {
+.container, .backdrop, .textArea {
     width: 98%;
 }
 
